# tacho

./: CMakeLists.txt  LICENSE  README.md
cmake/: Tacho_Config.cmake.in  Tacho_Config.hpp.in
cmake/modules/: FindBLAS.cmake  FindCUDA.cmake  FindLAPACK.cmake  FindMetis.cmake  FindOpenBLAS.cmake
core/: CMakeLists.txt  Tacho.hpp  Tacho_CommandLineParser.hpp  Tacho_CrsMatrixBase.hpp  Tacho_CuSolver.hpp  Tacho_CuSparseTriSolve.hpp  Tacho_Driver.hpp  Tacho_MatrixMarket.hpp  Tacho_Pardiso.hpp  Tacho_Solver.hpp
core/.do-not-use/: Tacho_DenseMatrixView.hpp  Tacho_GraphTools_CAMD.hpp  Tacho_GraphTools_MetisMT.hpp  Tacho_GraphTools_Scotch.hpp  Tacho_NumericTools_Factory.hpp  Tacho_Solver_Impl.hpp
core/eti/: Tacho_Driver_ETI.in
core/impl/: Tacho_ApplyPermutation.hpp  Tacho_ApplyPermutation_Internal.hpp  Tacho_ApplyPermutation_OnDevice.hpp  Tacho_ApplyPivots.hpp  Tacho_ApplyPivots_Internal.hpp  Tacho_ApplyPivots_OnDevice.hpp  Tacho_Blas_External.cpp  Tacho_Blas_External.hpp  Tacho_Blas_Team.hpp  Tacho_Chol.hpp  Tacho_CholSupernodes.hpp  Tacho_CholSupernodes_Serial.hpp  Tacho_CholSupernodes_SerialPanel.hpp  Tacho_Chol_External.hpp  Tacho_Chol_Internal.hpp  Tacho_Chol_OnDevice.hpp  Tacho_Copy.hpp  Tacho_Copy_Internal.hpp  Tacho_Copy_OnDevice.hpp  Tacho_DenseFlopCount.hpp  Tacho_Driver_Impl.hpp  Tacho_Gemm.hpp  Tacho_GemmTriangular.hpp  Tacho_GemmTriangular_External.hpp  Tacho_GemmTriangular_Internal.hpp  Tacho_GemmTriangular_OnDevice.hpp  Tacho_Gemm_External.hpp  Tacho_Gemm_Internal.hpp  Tacho_Gemm_OnDevice.hpp  Tacho_Gemv.hpp  Tacho_Gemv_External.hpp  Tacho_Gemv_Internal.hpp  Tacho_Gemv_OnDevice.hpp  Tacho_Graph.hpp  Tacho_GraphTools.hpp  Tacho_GraphTools_Metis.cpp  Tacho_GraphTools_Metis.hpp  Tacho_Herk.hpp  Tacho_Herk_External.hpp  Tacho_Herk_Internal.hpp  (+57 more)
core/impl/later/: Tacho_Chol_ByBlocks.hpp  Tacho_Gemm_ByBlocks.hpp  Tacho_Herk_ByBlocks.hpp  Tacho_LevelSetTools.hpp  Tacho_NumericTools.hpp  Tacho_TaskFunctor_FactorizeChol.hpp  Tacho_TaskFunctor_FactorizeCholByBlocks.hpp  Tacho_TaskFunctor_FactorizeCholByBlocksPanel.hpp  Tacho_TaskFunctor_FactorizeCholPanel.hpp  Tacho_TaskFunctor_MemoryPool.hpp  Tacho_TaskFunctor_SolveLowerChol.hpp  Tacho_TaskFunctor_SolveUpperChol.hpp  Tacho_TriSolveTools.hpp  Tacho_Trsm_ByBlocks.hpp
example/: CMakeLists.txt  Tacho_ExampleCholCuSolver.cpp  Tacho_ExampleCholPardiso.cpp  Tacho_ExampleCombineDataFileToMatrixMarketFile.cpp  Tacho_ExampleDriver.hpp  Tacho_ExampleDriver_complex_double.cpp  Tacho_ExampleDriver_complex_float.cpp  Tacho_ExampleDriver_double.cpp  Tacho_ExampleDriver_float.cpp  Tacho_ExampleExternalInterface.cpp  Tacho_ExampleExternalInterface.hpp
example/.do-not-use/: Tacho_ExampleCholLevelSet.cpp  Tacho_ExampleCholSupernodes.cpp  Tacho_ExampleCholTriSolve.cpp  Tacho_ExampleCuSparseTriSolve.cpp  Tacho_ExampleDenseByBlocks.cpp  Tacho_ExampleDeviceDenseCholesky.hpp  Tacho_ExampleDeviceDenseLDL.hpp  Tacho_ExampleDeviceDenseSolver.hpp  Tacho_ExampleDeviceDenseSolver_dcomplex.cpp  Tacho_ExampleDeviceDenseSolver_double.cpp  Tacho_ExamplePerfTest.cpp  Tacho_ExampleSolver.hpp  Tacho_ExampleSolver_dcomplex.cpp  Tacho_ExampleSolver_double.cpp
unit-test/: CMakeLists.txt  Tacho_Test.hpp  Tacho_TestCrsMatrixBase.hpp  Tacho_TestDenseLinearAlgebra.hpp  Tacho_TestGraphTools.hpp  Tacho_TestSymbolicTools.hpp  Tacho_TestUtil.cpp
unit-test/.do-not-test-yet/: Tacho_TestDenseLinearAlgebra.hpp  Tacho_TestDenseMatrixView.hpp  Tacho_TestNumeric.hpp  Tacho_TestTaskFunctor.hpp
unit-test/do-not-test-yet/: Tacho_TestDenseByBlocks.hpp
unit-test/eti/: Tacho_Test_ETI.in
