INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

# Empty list
SET(TACHO_EXAMPLE_SOURCES "")

# Append examples for checking functionality
LIST(APPEND TACHO_EXAMPLE_SOURCES
  Tacho_ExampleCombineDataFileToMatrixMarketFile.cpp
  Tacho_ExampleDriver_double.cpp
  Tacho_ExampleDriver_float.cpp
  Tacho_ExampleDriver_complex_double.cpp
  Tacho_ExampleDriver_complex_float.cpp
  Tacho_ExampleExternalInterface.cpp
)

# NVIDIA
IF (Kokkos_ENABLE_CUDA)
  IF (TACHO_ENABLE_CUDA)
    LIST(APPEND TACHO_EXAMPLE_SOURCES
      Tacho_ExampleCholCuSolver.cpp
    )
  ENDIF()
ENDIF()

#
# Intel MKL Pardiso
#
IF (Kokkos_ENABLE_OPENMP OR Kokkos_ENABLE_SERIAL)
  IF (TACHO_ENABLE_MKL)
    LIST(APPEND TACHO_EXAMPLE_SOURCES
      Tacho_ExampleCholPardiso.cpp
    )
  ENDIF()
ENDIF()

#
# Create examples for the above sources
#
FOREACH(TACHO_EXAMPLE_SOURCE ${TACHO_EXAMPLE_SOURCES} )
  STRING( REPLACE ".cpp" ".x" TACHO_EXAMPLE_EXE ${TACHO_EXAMPLE_SOURCE} )
  ADD_EXECUTABLE(${TACHO_EXAMPLE_EXE} ${TACHO_EXAMPLE_SOURCE})
  SET_TARGET_PROPERTIES(${TACHO_EXAMPLE_EXE} PROPERTIES COMPILE_FLAGS "")
  TARGET_LINK_LIBRARIES(${TACHO_EXAMPLE_EXE} ${TACHO_LINK_LIBRARIES})
  INSTALL(TARGETS ${TACHO_EXAMPLE_EXE}
          PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
          DESTINATION "${CMAKE_INSTALL_PREFIX}/${TACHO_INSTALL_EXAMPLE_PATH}")
ENDFOREACH()


#
# Testing data files
#
FILE(COPY data
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(DIRECTORY data
        DESTINATION ${CMAKE_INSTALL_PREFIX}/example)

